# OpenGLScene3D

./: CMakeLists.txt  README.md  setup.sh
assets/models/: Crate1.mtl
assets/shaders/: Basic.fs  Basic.vs  DepthBasic.fs  DepthBasic.vs  Scene.fs  Scene.vs  Skybox.fs  Skybox.vs  Texture.fs  Texture.vs
example/: Scene.cpp  Shadow.cpp  Sky.cpp
include/: FBO.h  GLCamera.h  GLObject.h  GLShader.h  GLTexture.h  Mat4.h  Skybox.h  Utils.h  Vector3f.h
src/: FBO.cpp  GLCamera.cpp  GLObject.cpp  GLShader.cpp  GLTexture.cpp  Mat4.cpp  Skybox.cpp  Utils.cpp  main.cpp
